example/SyntaxError/param_line_error.pione
Rule ABC
  input '*.a'
  output '*.b'
  param 1
Action
cat {$I[1]} > {$O[1]}
End